refactor: openapi
